added prediction, first results, decent with 100 epochs

--- a/configLaptop.ini
+++ b/configLaptop.ini
@@ -1,29 +1,34 @@
 [TODO]
 
 preprocess = no
-train = yes
-test = no
+train = no
+test = yes
 postprocess = no
 
 [PREP]
 
 trainSourceImages = /home/x/Experiments/kanjiDetection/data/original/
 trainSourceMasks = /home/x/Experiments/kanjiDetection/data/AllKanjiPositionAN/
+doTestFolder = no
 
 [TRAIN]
 
 tVDir = /home/x/Experiments/kanjiDetection/data/
-trainDir = /home/x/Experiments/kanjiDetection/data/train/
-validDir = /home/x/Experiments/kanjiDetection/data/validation/
+trainDir = train/
+validDir = validation/
 trainResFolder = /home/x/Experiments/kanjiDetection/results/train/
 valResFolder = /home/x/Experiments/kanjiDetection/results/train/
 
-sliceSize = 500
+sliceSize = 512
 trainPercentage = 70
-epochs = 10
-
+epochs = 100
 
 [TEST]
+
+testDir = /home/x/Experiments/kanjiDetection/data/test/
+#separate models by commas
+modelist = combined_data_10ex,combined_data_100ex
+predDir = /home/x/Experiments/kanjiDetection/predict/
 
 [POST]
 
