added dog, mser, with tests

--- a/configLaptop.ini
+++ b/configLaptop.ini
@@ -27,9 +27,11 @@ epochs = 200
 
 testDir = /home/x/Experiments/kanjiDetection/data/test/
 #separate models by commas
-modelist = combined_data_10ex,combined_data_100ex
+modelist = combined_data_10ex,combined_data_100ex,combined_data_200ex
 
 predDir = /home/x/Experiments/kanjiDetection/predict/
+
+expDir = /home/x/Experiments/kanjiDetection/exp/
 
 [POST]
 
