added conf files

--- a/configLaptop.ini
+++ b/configLaptop.ini
@@ -1,15 +1,19 @@
 [TODO]
 
-preprocess = no
-train = no
+preprocess = yes
+train = yes
 test = yes
 postprocess = no
+network = FRCNN
+# options, YOLO, FRCNN
 
 [PREP]
 
 trainSourceImages = /home/x/Experiments/kanjiDetection/data/original/
 trainSourceMasks = /home/x/Experiments/kanjiDetection/data/AllKanjiPositionAN/
 doTestFolder = no
+
+pytorchDataFolder = /home/x/Experiments/kanjiDetection/data/forPytorch/
 
 [TRAIN]
 
@@ -19,19 +23,24 @@ validDir = validation/
 trainResFolder = /home/x/Experiments/kanjiDetection/results/train/
 valResFolder = /home/x/Experiments/kanjiDetection/results/train/
 
-sliceSize = 512
+sliceSize = 1500
 trainPercentage = 70
-epochs = 200
+epochs = 1
+trainagain = yes
 
 [TEST]
 
 testDir = /home/x/Experiments/kanjiDetection/data/test/
+
 #separate models by commas
 modelist = combined_data_10ex,combined_data_100ex,combined_data_200ex
+#pmodel = fasterrcnn_resnet50_fpn.pth
+pmodel = ssdmodel.pth
 
 predDir = /home/x/Experiments/kanjiDetection/predict/
 
 expDir = /home/x/Experiments/kanjiDetection/exp/
+newMasksDir = /home/x/Experiments/kanjiDetection/newMasks/
 
 [POST]
 
