added separation of test and train

--- a/configWstation.ini
+++ b/configWstation.ini
@@ -25,8 +25,12 @@ valResFolder = /home/yago/experiments/kanjiDetection/results/train/
 
 sliceSize = 1500
 trainPercentage = 70
-epochs = 10
-trainagain = no
+epochs = 15
+
+# Pytorch models parameters
+trainagain = yes
+pScoreTH = 0.7
+pnmsTH = 0.3
 
 [TEST]
 
