test definetly working for yolo

--- a/configWstation.ini
+++ b/configWstation.ini
@@ -4,7 +4,7 @@ preprocess = yes
 train = yes
 test = yes
 postprocess = no
-network = FRCNN
+network = YOLO
 # options, YOLO, FRCNN
 
 [PREP]
@@ -20,12 +20,14 @@ pytorchDataFolder = /home/yago/experiments/kanjiDetection/data/forPytorch/
 tVDir = /home/yago/experiments/kanjiDetection/data/
 trainDir = train/
 validDir = validation/
+testDir = test/
+
 trainResFolder = /home/yago/experiments/kanjiDetection/results/train/
 valResFolder = /home/yago/experiments/kanjiDetection/results/train/
 
-sliceSize = 1500
+sliceSize = 3000
 trainPercentage = 70
-epochs = 15
+epochs = 200
 
 # Pytorch models parameters
 trainagain = yes
@@ -34,10 +36,11 @@ pnmsTH = 0.3
 
 [TEST]
 
-testDir = /home/yago/experiments/kanjiDetection/data/test/
+testNewDataDir = /home/yago/experiments/kanjiDetection/data/testNewData/
 
 #separate models by commas
-modelist = combined_data_10ex,combined_data_100ex,combined_data_200ex
+#modelist = combined_data_10ex,combined_data_100ex,combined_data_200ex
+modelist = combined_data_200ex5
 pmodel = fasterrcnn_resnet50_fpn.pth
 #pmodel = ssdmodel.pth
 
