--- a/configWstation.ini
+++ b/configWstation.ini
@@ -1,7 +1,7 @@
 [TODO]
 
-preprocess = yes
-train = yes
+preprocess = no
+train = no
 test = yes
 postprocess = no
 network = YOLO
@@ -25,7 +25,7 @@ testDir = test/
 trainResFolder = /home/yago/experiments/kanjiDetection/results/train/
 valResFolder = /home/yago/experiments/kanjiDetection/results/train/
 
-sliceSize = 3000
+sliceSize = 1500
 trainPercentage = 70
 epochs = 200
 
@@ -40,7 +40,7 @@ testNewDataDir = /home/yago/experiments/kanjiDetection/data/testNewData/
 
 #separate models by commas
 #modelist = combined_data_10ex,combined_data_100ex,combined_data_200ex
-modelist = combined_data_200ex5
+modelist = combined_data_200ex4
 pmodel = fasterrcnn_resnet50_fpn.pth
 #pmodel = ssdmodel.pth
 
