--- a/configDLEXP.ini
+++ b/configDLEXP.ini
@@ -27,7 +27,7 @@ valResFolder = /home/yago/experiments/kanjiDetection/results/train/
 
 sliceSize = 1500
 trainPercentage = 80
-epochs = 500
+epochs = 200
 yoloFormat =  yes
 
 # Pytorch models parameters
@@ -37,11 +37,13 @@ pnmsTH = 0.3
 
 [TEST]
 
+outTextFile = /home/yago/Yago Lab Dropbox/wasan/ongoingExps/outExpDL.txt
+
 testNewDataDir = /home/yago/experiments/kanjiDetection/data/sakuma2(2024)
 
 #separate models by commas
 #modelist = combined_data_10ex,combined_data_100ex,combined_data_200ex
-modelist = combined_data_200ex6
+#modelist = combined_data_200ex6
 pmodel = fasterrcnn_resnet50_fpn.pth
 #pmodel = ssdmodel.pth
 
