added fcos, retina, measure time, fixed weird maskrcnn evaluator

--- a/configDLEXPLAPTOP.ini
+++ b/configDLEXPLAPTOP.ini
@@ -37,11 +37,13 @@ pnmsTH = 0.3
 
 [TEST]
 
+outTextFile = /home/x/Experiments/kanjiDetection/testingOutExpDL.txt
+
+
 testNewDataDir = /home/x/Experiments/kanjiDetection/data/sakuma2(2024)
 
 #separate models by commas
 #modelist = combined_data_10ex,combined_data_100ex,combined_data_200ex
-modelist = combined_data_200ex6
 pmodel = fasterrcnn_resnet50_fpn.pth
 #pmodel = ssdmodel.pth
 
