added storing preds and prediction of full images

--- a/configDLEXP.ini
+++ b/configDLEXP.ini
@@ -26,7 +26,7 @@ trainResFolder = /home/yago/experiments/kanjiDetection/results/train/
 valResFolder = /home/yago/experiments/kanjiDetection/results/train/
 
 sliceSize = 1500
-trainPercentage = 80
+trainPercentage = 90
 epochs = 200
 yoloFormat =  yes
 
@@ -48,7 +48,7 @@ pmodel = fasterrcnn_resnet50_fpn.pth
 #pmodel = ssdmodel.pth
 
 #predDir = /home/yago/experiments/kanjiDetection/predict/
-predDir = /home/yago/experiments/kanjiDetection/predictND/
+predDir = /home/yago/Yago Lab Dropbox/wasan/ongoingExps/predictPytorch/
 
 expDir = /home/yago/experiments/kanjiDetection/exp/
 newMasksDir = /home/yago/experiments/kanjiDetection/newMasks/
